# rLightning

./: .dockerignore  .dockerignore.site  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DOCUMENTATION_SETUP.md  Dockerfile  Dockerfile.release  Dockerfile.site  LICENSE  README.md  SECURITY.md  docker-compose.docs.yml  docker-compose.yml
.beads/: issues.jsonl
.devcontainer/: devcontainer.json  docker-compose.test.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  release.yml  test-release.yml  test-release_self.yml
.ralphex/progress/: progress-2026-03-20-performance-optimization-v3.txt
benches/: advanced_features_bench.rs  auth_bench.rs  cluster_bench.rs  command_category_bench.rs  geo_bitmap_hll_bench.rs  protocol_bench.rs  redis_comparison_bench.rs  replication_bench.rs  scan_bench.rs  storage_bench.rs  throughput_bench.rs
config/: benchmark.toml  default.toml
docs/: OPTIMIZATION_PLAN.md
docs/plans/: 2026-02-25-redis-full-compatibility.md  2026-02-26-fix-errors-optimize-redis-compliance.md  2026-03-20-performance-optimization-v3.md  2026-03-23-performance-fixes-cluster-activation.md  2026-03-24-performance-memory-optimization.md  2026-03-27-xadd-pipeline-mset-optimization.md  20260303-full-redis-compatibiity.md
scripts/: benchmark_comparison.sh  build-docs.sh
site/: README.md  astro.config.mjs  mkdocs.yml  nginx.conf  package-lock.json  package.json
site/docs/: architecture.md  benchmarks.md  building.md  command-processing.md  configuration.md  development.md  docker.md  faq.md  getting-started.md  index.md  memory.md  networking.md  optimization.md  persistence.md  quick-start.md  replication.md  security.md  storage-engine.md  testing.md  use-cases.md
site/src/: content.config.ts
src/: lib.rs  main.rs
src/cluster/: gossip.rs  migration.rs  mod.rs  slot.rs
src/command/: commands.rs  error.rs  handler.rs  mod.rs  parser.rs  transaction.rs  utils.rs
src/networking/: client.rs  error.rs  json_resp.rs  mod.rs  raw_command.rs  resp.rs  resp_parser_state.rs  server.rs
src/persistence/: aof.rs  config.rs  error.rs  hybrid.rs  mod.rs  rdb.rs  tests.rs
tests/: acceptance_test.rs  auth_integration_test.rs  b64json_test.rs  benchmark_validation_test.rs  bug_report_verification.rs  client_list_sub_count_test.rs  cluster_test.rs  compliance_unit_test.rs  data_corruption_test.rs  datetime_utils_test.rs  debug_key_test.rs  debug_large_value_test.rs  debug_logging_test.rs  direct_test.rs  geo_tx_key_extraction_test.rs  integration_test.rs  json_datetime_test.rs  json_protocol_integration_test.rs  json_protocol_test.rs  large_json_integration_test.rs  large_json_protocol_test.rs  large_json_test.rs  large_value_bug_test.rs  large_value_test.rs  lib.rs  list_blocking_test.rs  list_operations_test.rs  pipeline_error_isolation_test.rs  protocol_integration_test.rs  pubsub_test.rs  redis_100percent_compliance_test.rs  redis_cluster_compat_test.rs  redis_commands_spec.rs  redis_compatibility_advanced.rs  redis_compatibility_edge_cases.rs  redis_compatibility_runner.rs  redis_compatibility_test.rs  redis_datatype_compatibility.rs  redis_full_compatibility_test.rs  redis_geo_test.rs  (+25 more)
(+223 files in other folders)
