[package]
name = "rlightning"
version = "2.0.0"
edition = "2024"
description = "Redis-compatible in-memory key-value store focused on session management and caching"
authors = ["nxrvl"]
license = "MIT"
repository = "https://github.com/nxrvl/rLightning"
keywords = ["redis", "cache", "database", "key-value", "datastore"]
categories = ["database", "caching"]
homepage = "https://rlightning.mpanin.me"
readme = "README.md"

[dependencies]
# Async runtime
tokio = { version = "1.32", features = ["full"] }
# Efficient collections
hashbrown = "0.14"
bytes = "1.5"
# Ordered floating point for BTreeSet usage
ordered-float = { version = "4", features = ["serde"] }
# Concurrent HashMap implementation
dashmap = "5.5.3"
# Optimized memory allocator
jemallocator = "0.5.0"
# Efficient buffer scanning
memchr = "2.5.0"
# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Logging and error handling
# log = "0.4" # Replaced by tracing
# env_logger = "0.10" # Replaced by tracing-subscriber
thiserror = "1.0"
anyhow = "1.0"
# Configuration
# config = "0.13" # Replaced by figment
figment = { version = "0.10", features = ["toml", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# toml = "0.8" # Included via figment's toml feature
# Serialization
bincode = "1.3"
# Command line argument parsing
clap = { version = "4.4", features = ["derive"] }
regex = "1.10"
once_cell = "1.21.1"
lazy_static = "1.4.0"
# Persistence
byteorder = "1.5"
crc32fast = "1.3"
# Futures utilities
futures = "0.3"
# Datetime handling
chrono = { version = "0.4", features = ["serde"] }
# UUID generation
uuid = { version = "1.4", features = ["v4", "serde"] }
# CPU information
num_cpus = "1.16.0"
# LRU cache
lru = "0.12"
# Random number generation
fastrand = "2.0"
# Cryptographically secure random bytes (for ACL GENPASS)
getrandom = "0.3"
# Lua scripting engine (Lua 5.1 for Redis compatibility)
mlua = { version = "0.10", features = ["lua51", "vendored"] }
# SHA1 hashing for script caching
sha1_smol = "1.0"
# SHA256 hashing for ACL password storage (Redis-compatible)
sha2 = "0.10"


[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }
redis = "0.23" # For integration testing with a real Redis client
tempfile = "3.8" # For creating temporary files in tests
fastrand = "2.0" # For generating random values in benchmarks
base64 = "0.21" # For testing base64-encoded data scenarios

# Profiling dependencies
pprof = { version = "0.13", features = ["flamegraph", "protobuf", "criterion"] }

[[bench]]
name = "storage_bench"
harness = false

[[bench]]
name = "protocol_bench"
harness = false

[[bench]]
name = "throughput_bench"
harness = false

[[bench]]
name = "redis_comparison_bench"
harness = false

[[bench]]
name = "replication_bench"
harness = false

[[bench]]
name = "auth_bench"
harness = false

[[bench]]
name = "command_category_bench"
harness = false

[[bench]]
name = "advanced_features_bench"
harness = false

[[bench]]
name = "cluster_bench"
harness = false

# Profiling configuration for benchmarks
[profile.bench]
debug = true
